feat: add mobile device support with performance optimization

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <canvas id="starfield"></canvas>
     <div class="overlay">
         <h1>宁静星空</h1>
-        <p>移动鼠标探索星空</p>
+        <p class="hint-text">移动鼠标探索星空</p>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
+
